# rusty-web-portfolio

./: Cargo.toml  index.html
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  main.rs
src/assets/: an-cli.webm  assembly.webm  copperknight.webm  file-manager.webm  obsctl.webm
src/components/: background.rs  cloud.rs  cloud_bg.rs  footer.rs  homehero.rs  mod.rs  navbar.rs
src/pages/: about.rs  contact.rs  home.rs  mod.rs  projects.rs  skills.rs
src/utils/: glass.rs  macros.rs  mod.rs  projects_data.rs  skills_data.rs
src/wasm/: cloud_shader.rs  init.rs  mod.rs
src/wasm/shaders/: cloudfrag.glsl  cloudvert.glsl
style/: tailwind.css
