[package]
name = "rusty-web-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.83"
leptos = { version = "0.8.15", features = ["csr"] }
three-d = "0.18.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window","Element", "Document", "HtmlCanvasElement", "WebGl2RenderingContext", "Element", "IntersectionObserver","IntersectionObserverEntry",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "Performance",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
] }
